--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,9 +1,20 @@
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://s3-us-west-2.amazonaws.com/prd-rteditorial/wp-content/uploads/2018/03/13153742/RT_300EssentialMovies_700X250.jpg);">
+  <div class="container">
+    <div class="flex-item align-center align-middle">
+      <h1><strong><%= @list.name %></strong></h1>
+    </div>
+    <div class="flex-item">
+      <%= link_to "Add a movie", new_list_bookmark_path(@list), class: "btn btn-flat" %>
+  </div>
+  </div>
+</div>
+
 <h1><%= @list.name %></h1>
 
 <ul>
   <% @list.bookmarks.each do |bookmark| %>
     <h2><%= bookmark.movie.title %></h2>
-    <img src=<%= bookmark.movie.poster_url %> alt="bookmark.movie.title"><%=  %>
+    <img src=<%= bookmark.movie.poster_url %> alt="bookmark.movie.title">
     <p><%= bookmark.movie.rating %></p>
     <p><%= bookmark.movie.overview %></p>
     <p><%= bookmark.comment %></p>
