--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -11,17 +11,18 @@
 
 <h1><%= @list.name %></h1>
 
-<ul>
-  <% @list.bookmarks.each do |bookmark| %>
-    <h2><%= bookmark.movie.title %></h2>
+<% @list.bookmarks.each do |bookmark| %>
+  <div class="card-product">
     <img src=<%= bookmark.movie.poster_url %> alt="bookmark.movie.title">
-    <p><%= bookmark.movie.rating %></p>
-    <p><%= bookmark.movie.overview %></p>
-    <p><%= bookmark.comment %></p>
-    <%= link_to "Delete", bookmark_path(bookmark), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
-  %>
-  <% end %>
-</ul>
+    <div class="card-product-infos">
+      <h2><%= bookmark.movie.title %></h2>
+      <p><%= bookmark.movie.rating.round(2) %> ⭐</p>
+      <p><%= bookmark.movie.overview %></p>
+      <p><%= bookmark.comment %></p>
+      <%= link_to "Delete", bookmark_path(bookmark), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
+    </div>
+  </div>
+<% end %>
 
 
 <%= link_to "Add movie", new_list_bookmark_path(@list) %>
