--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -5,3 +5,13 @@
 <% end %>
 </ul>
 <%= link_to "Create new list", new_list_path %>
+
+<div class="cards">
+  <% @lists.each do |list| %>
+
+  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
+    <%= list.name %>
+  </div>
+
+  <% end %>
+</div>
