--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,17 +1,16 @@
-<h1>My lists</h1>
-<ul>
-<% @lists.each do |list| %>
-  <li><%= link_to list.name, list_path(list) %></li>
-<% end %>
-</ul>
-<%= link_to "Create new list", new_list_path %>
+<h1 class="m-3">My lists</h1>
 
-<div class="cards">
+
+<div class="cards m-3">
   <% @lists.each do |list| %>
-
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
-    <%= list.name %>
-  </div>
-
+    <%= link_to list_path(list), class:"text-decoration-none" do %>
+      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "comedies.jpg" %>)">
+        <%= list.name %>
+      </div>
+    <% end %>
   <% end %>
+</div>
+
+<div class="m-3">
+  <%= link_to "Create new list", new_list_path, :class => "btn btn-primary" %>
 </div>
