--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -4,7 +4,7 @@
 <div class="cards m-3">
   <% @lists.each do |list| %>
     <%= link_to list_path(list), class:"text-decoration-none" do %>
-      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "comedies.jpg" %>)">
+      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path list.photo.key, height: 300, crop: :fill %>)">
         <%= list.name %>
       </div>
     <% end %>
@@ -14,5 +14,3 @@
 <div class="m-3">
   <%= link_to "Create new list", new_list_path, :class => "btn btn-primary" %>
 </div>
-
-dsfsd
