--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -8,6 +8,8 @@
     <%= f.input :name %>
   </div>
 
+  <%= f.input :photo, as: :file %>
+
   <div class="form-actions">
     <%= f.button :submit %>
   </div>
