fixed action and event for stimulus controller

--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,6 +1,7 @@
 <h4>Add a movie</h4>
 <%= simple_form_for [@list, @bookmark], data: { controller: "movie-autocomplete", movie_autocomplete_target: "form" } do |f| %>
   <%= f.input :comment, placeholder: "Your thoughts about this movie" %>
-  <%= f.association :movie %>
+  <%# <%= f.association :movie %>
+  <%= f.input :movie, input_html: { data: { movie_autocomplete_target: "input", action: "input->movie-autocomplete#search" }} %>
   <%= f.button :submit %>
 <% end %>
