add autocomplete options and selector

--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -2,6 +2,8 @@
 <%= simple_form_for [@list, @bookmark], data: { controller: "movie-autocomplete", movie_autocomplete_target: "form" } do |f| %>
   <%= f.input :comment, placeholder: "Your thoughts about this movie" %>
   <%# <%= f.association :movie %>
-  <%= f.input :movie, input_html: { data: { movie_autocomplete_target: "input", action: "input->movie-autocomplete#search" }} %>
+  <%= f.input :movie, input_html: { data: { movie_autocomplete_target: "input", action: "input->movie-autocomplete#search" }, id: "autocomplete-field"} %>
+  <ul id="autocomplete-options" data-movie-autocomplete-target="options" data-action="click->movie-autocomplete#select">
+  </ul>
   <%= f.button :submit %>
 <% end %>
