--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
-    <%= link_to "#", class: "navbar-brand" do %>
+    <%= link_to "http://localhost:3000/lists/", class: "navbar-brand" do %>
       <%= image_tag "https://www.nicepng.com/png/detail/133-1333510_made-a-flat-popcorn-time-icon-illustration.png" %>
     <% end %>
 
