--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -16,6 +16,8 @@
       <h2><%= bookmark.movie.title %></h2>
       <p><%= bookmark.movie.rating.round(2) %> ⭐</p>
       <p><%= bookmark.movie.overview %></p>
+      <hr>
+      <h3>Comment</h3>
       <p><%= bookmark.comment %></p>
       <%= link_to "Delete", bookmark_path(bookmark), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
     </div>
