--- a/app/assets/stylesheets/components/_card_product.scss
+++ b/app/assets/stylesheets/components/_card_product.scss
@@ -1,6 +1,6 @@
 .card-product {
-  overflow: hidden;
-  height: 200px;
+  align-items: flex-start;
+  max-height: 200px;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
@@ -8,10 +8,15 @@
   margin: 20px auto;
   width: 1000px;
   overflow: hidden;
+  padding: 0;
+}
+
+.card-product.expanded {
+  max-height: none;
 }
 
 .card-product img {
-  height: 100%;
+  height: 200px;
   width: 120px;
   object-fit: cover;
 }
@@ -33,9 +38,17 @@
   opacity: .7;
   margin-bottom: 0;
   margin-top: 8px;
+  cursor: pointer;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+.card-product.expanded p {
+  height: auto;
+  overflow: visible;
+  text-overflow: clip;
+  white-space: normal;
 }
 
 .card-product .card-product-infos {
