--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,16 +1,20 @@
 <h1>Create a new list</h1>
 
-<%= simple_form_for(@list) do |f| %>
-  <%= f.error_notification %>
-  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+<div class="card p-3" style="width: 18rem;">
+  <div>
+    <%= simple_form_for(@list) do |f| %>
+      <%= f.error_notification %>
+      <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-  <div class="form-inputs">
-    <%= f.input :name %>
+      <div class="form-inputs">
+        <%= f.input :name %>
+      </div>
+
+      <%= f.input :photo, as: :file %>
+
+      <div class="form-actions">
+        <%= f.button :submit %>
+      </div>
+    <% end %>
   </div>
-
-  <%= f.input :photo, as: :file %>
-
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
-<% end %>
+</div>
