--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,7 +1,7 @@
-<h1>Create a new list</h1>
+<h1 class="m-3">Create a new list</h1>
 
-<div class="card p-3" style="width: 18rem;">
-  <div>
+<div class="card m-3 rounded-3 shadow-sm" style="width: 40rem;">
+  <div class="m-3">
     <%= simple_form_for(@list) do |f| %>
       <%= f.error_notification %>
       <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
@@ -13,7 +13,7 @@
       <%= f.input :photo, as: :file %>
 
       <div class="form-actions">
-        <%= f.button :submit %>
+        <%= f.button :submit, :class => "btn btn-primary" %>
       </div>
     <% end %>
   </div>
