--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -19,7 +19,7 @@
       <hr>
       <h3>Comment</h3>
       <p><%= bookmark.comment %></p>
-      <%= link_to "Delete", bookmark_path(bookmark), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
+      <%= link_to "Delete", bookmark_path(bookmark), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, :class => "btn btn-primary mt-1" %>
     </div>
   </div>
 <% end %>
