--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -19,6 +19,7 @@
       <hr>
       <h3>Comment</h3>
       <p><%= bookmark.comment %></p>
+      <%= link_to "Edit comment", edit_bookmark_path(bookmark), :class => "btn btn-primary mt-1" %>
       <%= link_to "Delete", bookmark_path(bookmark), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, :class => "btn btn-primary mt-1" %>
     </div>
   </div>
