--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -27,5 +27,6 @@
 
 <div class="text-center m-3">
   <%= link_to "Add movie", new_list_bookmark_path(@list), :class => "btn btn-primary" %>
+  <%= link_to "Delete list", list_path(@list), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, :class => "btn btn-danger text-white" %>
   <%= link_to "Go back", lists_path, :class => "btn btn-primary" %>
 </div>
