--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+    <%= favicon_link_tag "https://www.nicepng.com/png/detail/133-1333510_made-a-flat-popcorn-time-icon-illustration.png" %>
   </head>
 
   <body>
