changed button color

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -41,4 +41,10 @@
 
 .btn-custom {
   font-size: 12px;
+  background: #670BFF;
+}
+
+.btn-custom:hover {
+  font-size: 12px;
+  background: #4D04C4;
 }
